# ppong

./: CMakeLists.txt
.cache/clangd/index/: ai.c.145DFCD57A08EB7E.idx  ai.h.D5A77325550750B1.idx  ball.c.35396044A497A592.idx  ball.h.2D46E180B3AF17F1.idx  font.c.76DC83E3F0CB255B.idx  font.h.BB15431EB07A2A9E.idx  game.c.0935183B9FDF5ECF.idx  game.h.27A6C1362AF94C30.idx  main.c.543172869FE85FCD.idx  menu.c.242B372BAB9CB7D4.idx  menu.h.0AD0FA637B466D77.idx  racket.c.70DC504CEBDFACF0.idx  racket.h.A0B4FC92B0F7207B.idx  screen.c.5B2303BDDF7B15A5.idx  screen.h.2CE7549CB6D4ED5E.idx
src/: ai.c  ai.h  ball.c  ball.h  font.c  font.h  game.c  game.h  main.c  menu.c  menu.h  racket.c  racket.h
